# olaf

./: .env.example  .gitignore  README.md  crewai_flow.html  flow.py  log.log6  plot.py  pyproject.toml  requirements.txt  run_crew.sh
db/: chroma.sqlite3
reports/: snow_removal_dashboard_template.html  snow_removal_report_20250131_194807.html  snow_removal_report_20250201_100510.html  snow_removal_report_20250201_122026.html  snow_removal_report_20250201_132553.html  snow_removal_report_20250201_132601.html  snow_removal_report_20250201_145635.html  snow_removal_report_20250201_155941.html  snow_removal_report_20250201_160239.html  snow_removal_report_20250201_161808.html  snow_removal_report_20250201_165458.html  snow_removal_report_20250201_170402.html  snow_removal_report_20250201_170915.html  snow_removal_report_20250201_171225.html  snow_removal_report_20250201_171856.html  snow_removal_report_20250201_173108.html  snow_removal_report_20250201_173612.html  snow_removal_report_20250201_174227.html  snow_removal_report_20250201_174528.html  snow_removal_report_20250201_175351.html  snow_removal_report_20250201_184727.html  snow_removal_report_20250201_193130.html  snow_removal_report_20250201_195341.html  snow_removal_report_20250201_195532.html  snow_removal_report_20250201_200406.html  snow_removal_report_20250201_200535.html  snow_removal_report_20250201_201136.html  snow_removal_report_20250202_091604.html  snow_removal_report_20250202_113500.html  snow_removal_report_20250202_145757.html  snow_removal_report_20250202_150055.html  (+78 more)
(+20 files in other folders)
